--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "workspaces": [],
   "scripts": {},
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "prettier": "^2.7.1"
+  },
   "packageManager": "yarn@1.22.19",
   "engines": {
     "node": ">=14.0.0"
