--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {},
   "dependencies": {},
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "turbo": "^1.5.6"
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
