--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "next lint",
     "start": "next start"
   },
