chore(root): add format pipeline for turbo

--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,12 @@
   "pipeline": {
     "dev": {
       "cache": false
+    },
+    "format": {
+      "outputs": []
+    },
+    "lint": {
+      "outputs": []
     }
   }
 }
