--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.[jt]s?(x)\"",
     "lint": "next lint",
     "start": "next start"
   },
