chore(root): add build pipeline for turbo

--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,10 @@
     },
     "lint": {
       "outputs": []
+    },
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**"]
     }
   }
 }
