--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apps/*"
   ],
   "scripts": {
+    "build": "turbo build",
     "dev": "turbo dev",
     "format": "turbo format",
     "lint": "turbo lint"
