--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "^18.8.5",
+    "eslint": "^8.25.0",
     "prettier": "^2.7.1",
-    "turbo": "^1.5.6"
+    "turbo": "^1.5.6",
+    "typescript": "^4.8.4"
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
