--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,6 +17,6 @@
   "devDependencies": {
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-custom": "*"
   }
 }
