--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,23 +10,22 @@
     "start": "node dist/main"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/common": "^9.1.4",
+    "@nestjs/core": "^9.1.4",
     "@nestjs/platform-fastify": "^9.1.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.5.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@nestjs/cli": "^9.1.4",
+    "@nestjs/schematics": "^9.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint-plugin-custom": "*",
     "fastify": "^4.8.1",
-    "source-map-support": "^0.5.20",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "source-map-support": "^0.5.21",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
     "webpack": "^5.74.0"
   }
