--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "author": "bek <geebrox@gmail.com>",
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ],
   "scripts": {
     "build": "turbo build",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^18.8.5",
     "eslint": "^8.25.0",
+    "eslint-config-custom": "*",
     "prettier": "^2.7.1",
     "turbo": "^1.5.6",
     "typescript": "^4.8.4"
