--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,7 +16,6 @@
   },
   "devDependencies": {
     "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "eslint-config-custom": "*"
+    "@types/react-dom": "18.0.6"
   }
 }
