--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.25.0",
     "eslint-config-custom": "*",
     "prettier": "^2.7.1",
+    "tsconfig": "*",
     "turbo": "^1.5.6",
     "typescript": "^4.8.4"
   },
