--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "turbo build",
+    "clean": "turbo clean",
     "dev": "turbo dev",
     "format": "turbo format",
     "lint": "turbo lint"
@@ -17,9 +18,12 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^18.8.5",
+    "concurrently": "^7.4.0",
     "eslint": "^8.25.0",
     "eslint-config-custom": "*",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "rimraf": "^3.0.2",
     "tsconfig": "*",
     "turbo": "^1.5.6",
     "typescript": "^4.8.4"
