--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,14 +2,24 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "exports": {
+    ".": "./dist",
+    "./styles.css": "./dist/styles.css"
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsup src/index.tsx --format esm,cjs --dts --external react && tailwindcss -i ./src/styles.css -o ./dist/styles.css",
+    "clean": "rimraf -rf dist",
+    "dev": "concurrently \"tsup src/index.tsx --format esm,cjs --dts --external react --watch\" \"tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch\"",
     "lint": "TIMING=1 eslint \"./**/*.[jt]s?(x)\" --fix"
   },
   "devDependencies": {
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "react": "18.2.0"
+    "react": "18.2.0",
+    "tailwind-config": "*",
+    "tailwindcss": "^3.2.0",
+    "tsup": "^6.3.0"
   }
 }
