--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "db": "*",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,6 +20,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "next-transpile-modules": "^9.1.0",
     "postcss": "^8.4.18",
     "tailwind-config": "*",
     "tailwindcss": "^3.2.0"
