--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "nest build",
-    "dev": "nest start --watch",
+    "dev": "nest start --watch --preserveWatchOutput",
     "format": "prettier --write \"./**/*.[jt]s?(x)\"",
     "lint": "eslint \"src/**/*.[jt]s?(x)\" --fix",
     "start": "node dist/main"
@@ -12,7 +12,10 @@
   "dependencies": {
     "@nestjs/common": "^9.1.4",
     "@nestjs/core": "^9.1.4",
+    "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/platform-fastify": "^9.1.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.7"
   },
