--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -6,5 +6,8 @@
     "nest.json",
     "next.json",
     "react.json"
-  ]
+  ],
+  "scripts": {
+    "format": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write \"./**/*.[jt]s?(x)?(on)\""
+  }
 }
