--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "format": "turbo format",
     "lint": "turbo lint",
     "sort-packages": "npx sort-package-json \"package.json\" \"apps/*/package.json\" \"packages/*/package.json\"",
-    "start": "turbo start"
+    "start": "turbo start",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@prisma/client": "^4.5.0"
@@ -33,7 +34,8 @@
     "rimraf": "^3.0.2",
     "tsconfig": "*",
     "turbo": "^1.5.6",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "husky": "^8.0.0"
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
