--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "dev": "dotenv -e .env turbo dev",
     "format": "turbo format",
     "lint": "turbo lint",
+    "prepare": "husky install",
     "sort-packages": "npx sort-package-json \"package.json\" \"apps/*/package.json\" \"packages/*/package.json\"",
-    "start": "turbo start",
-    "prepare": "husky install"
+    "start": "turbo start"
   },
   "dependencies": {
     "@prisma/client": "^4.5.0"
@@ -28,14 +28,14 @@
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.25.0",
     "eslint-config-custom": "*",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.5.0",
     "rimraf": "^3.0.2",
     "tsconfig": "*",
     "turbo": "^1.5.6",
-    "typescript": "^4.8.4",
-    "husky": "^8.0.0"
+    "typescript": "^4.8.4"
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
