feat: add shared package

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,7 +17,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.7"
+    "rxjs": "^7.5.7",
+    "shared": "*"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.4",
